修改相关代码，完成心跳和ws鉴权

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=botjava
+spring.profiles.active=local
+# 机器人token uid.token
+my.bot.ws.token=
+# 分片 默认[0,1]
+my.bot.ws.shard=
+# 其他配置
+my.bot.ws.properties=
+# 权限配置
+my.bot.ws.intents=
+# 重连最大次数，默认10
+my.bot.ws.reConnectMaxTimes=
+# ws地址
+my.bot.ws.url= wss://api.sgroup.qq.com/websocket/
